--- a/hyperneo.ipynb
+++ b/hyperneo.ipynb
@@ -163,8 +163,8 @@
     }
    ],
    "source": [
-    "# This json object named 'settings' stores the order of node labels, the set of node label names, \n",
-    "# the order of inferred communities, and the hyperparameter set for each empirical hypergraph in addition to the random seed.\n",
+    "# The object named 'settings' stores the order of node labels, the set of node label names, \n",
+    "# the order of inferred communities, the hyperparameter set for each empirical hypergraph, and the random seed.\n",
     "\n",
     "import json\n",
     "print(json.dumps(settings, indent=2))"
@@ -192,7 +192,7 @@
    ],
    "source": [
     "# Load a data set. \n",
-    "# You can specify \"workplace\", \"hospital\", \"high-school\", or \"primary-school\" as data_name. \n",
+    "# Specify \"workplace\", \"hospital\", \"high-school\", or \"primary-school\" as data_name. \n",
     "# In this example, specify the workplace data set.\n",
     "\n",
     "data_name = \"workplace\"\n",
@@ -206,19 +206,75 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f2a3aed2-818c-4391-9c20-51dfeb0e5b78",
+   "id": "1e1195e8-7e6c-4533-b290-9f53dbd31a22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DISQ', 'DMCT', 'DSE', 'SFLE', 'SRH']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Set the random seed and the hyperparameters.\n",
+    "# Set of node label names\n",
     "\n",
-    "random_state = settings[\"random_state\"]\n",
-    "(K, gamma) = settings[data_name][\"hyperparam\"]"
+    "settings[data_name][\"label_name\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a61c62ee-8e2b-442a-8072-89e9b71f90dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Order of the node labels\n",
+    "\n",
+    "settings[data_name][\"label_order\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f2a3aed2-818c-4391-9c20-51dfeb0e5b78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42 5 0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the random seed and the hyperparameters.\n",
+    "\n",
+    "random_state = settings[\"random_state\"]\n",
+    "(K, gamma) = settings[data_name][\"hyperparam\"]\n",
+    "\n",
+    "print(random_state, K, gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d39fadae-3070-4908-ba48-024763093660",
    "metadata": {},
    "outputs": [],
@@ -231,7 +287,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
+   "id": "94820692-5b48-4868-853e-136833172d98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1186.8274248381172"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Log-likelihood\n",
+    "\n",
+    "best_loglik"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e23954f9-0ada-4ad3-801c-a049aba87c52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Order of the inferred communities\n",
+    "\n",
+    "settings[data_name][\"community_order\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3ba49ff9-7d5b-46d6-9d82-00209cd68245",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((92, 5),\n",
+       " array([[2.42826103e+00, 7.52671200e-25, 2.48959193e-11, 2.12878775e-12,\n",
+       "         4.43568297e-15],\n",
+       "        [1.84022052e+00, 4.92011576e-03, 2.28640050e-01, 1.86312541e-03,\n",
+       "         4.09222316e+00],\n",
+       "        [1.65422241e+01, 8.12943840e-03, 4.30538969e-04, 6.08673381e-11,\n",
+       "         4.59046378e-05],\n",
+       "        [2.34527853e+00, 1.04595880e-28, 1.85357407e-10, 8.28810917e-13,\n",
+       "         3.26584462e-17],\n",
+       "        [9.19282562e-01, 1.02366453e-30, 3.07226722e-19, 3.67059482e-20,\n",
+       "         3.50706906e-02],\n",
+       "        [7.16927842e+00, 3.97094466e-10, 1.15181449e-08, 4.32547585e-11,\n",
+       "         3.31568890e-03],\n",
+       "        [1.64747888e+01, 7.39826154e-10, 6.93151475e-06, 3.73053836e-02,\n",
+       "         1.53443986e-02],\n",
+       "        [1.56415507e+01, 5.24996456e-01, 5.00325481e-07, 2.31795769e-04,\n",
+       "         3.96620783e-11],\n",
+       "        [4.30956043e+00, 3.02916791e-02, 1.11483972e-02, 7.53957195e-02,\n",
+       "         5.37279845e-01],\n",
+       "        [1.25321330e+01, 1.06624441e-03, 3.23436289e-05, 5.09287649e-02,\n",
+       "         3.25336228e-01],\n",
+       "        [1.45014992e+01, 9.09103243e-09, 3.02337420e-06, 7.79811988e-02,\n",
+       "         7.69030601e-01],\n",
+       "        [1.08469570e+01, 3.72342891e-04, 1.07368219e-05, 1.87429719e-06,\n",
+       "         2.19259128e-05],\n",
+       "        [1.15675619e+01, 8.03944017e-20, 3.29821716e-06, 2.77455617e-08,\n",
+       "         8.26620794e-14],\n",
+       "        [8.21071750e+00, 2.85672571e-02, 7.26193805e-04, 1.73658572e-02,\n",
+       "         1.16222075e-01],\n",
+       "        [3.00567505e+00, 8.52973158e-12, 2.05681595e-07, 3.19976944e-07,\n",
+       "         4.83777085e-01],\n",
+       "        [4.95991876e-15, 6.58259868e-05, 1.31208590e-18, 2.03840294e-18,\n",
+       "         5.52188455e+00],\n",
+       "        [4.42407629e-15, 6.13535246e-02, 9.15821000e-09, 2.79953959e-07,\n",
+       "         3.63241855e+00],\n",
+       "        [2.58385887e-18, 6.53613291e-04, 9.58823865e-25, 4.00037498e-20,\n",
+       "         5.02102561e+00],\n",
+       "        [1.07317854e-04, 4.12348352e-02, 2.98282175e-10, 1.28559007e-08,\n",
+       "         1.66526323e+01],\n",
+       "        [6.95944015e-22, 6.62191975e-04, 1.82688493e-20, 2.78596093e-20,\n",
+       "         4.32716828e+00],\n",
+       "        [4.09657619e-02, 1.41410887e+00, 3.14989913e-02, 5.44859590e-04,\n",
+       "         4.28015597e+00],\n",
+       "        [3.23734817e-21, 3.80263752e-10, 9.91524401e-31, 1.74023282e-24,\n",
+       "         1.97962755e+01],\n",
+       "        [2.62614867e-07, 2.83072135e-02, 5.78837566e-02, 1.57912598e-02,\n",
+       "         7.28652655e+00],\n",
+       "        [4.74187293e-10, 4.48227252e+00, 3.26314038e-05, 8.53442859e-06,\n",
+       "         9.72850407e-01],\n",
+       "        [5.11079257e-01, 1.11451271e-09, 2.56542101e-11, 5.69515411e-06,\n",
+       "         1.27864384e+00],\n",
+       "        [8.08833021e-07, 1.06265013e-01, 2.13367423e-03, 1.23823715e+00,\n",
+       "         4.53911549e+00],\n",
+       "        [1.99352761e+00, 1.55141995e-01, 4.20149057e-03, 1.50472764e-02,\n",
+       "         7.49970330e+00],\n",
+       "        [1.64029552e-17, 2.93586654e-08, 1.48176701e-22, 1.57314153e-16,\n",
+       "         1.50026112e+01],\n",
+       "        [4.04583532e-02, 1.19048407e-20, 5.85447673e-09, 8.21572307e-09,\n",
+       "         3.53398079e+00],\n",
+       "        [1.03723473e-02, 2.74670240e-11, 3.65808849e-02, 8.40198361e-09,\n",
+       "         4.52744329e+00],\n",
+       "        [2.94865654e-10, 2.32630980e-16, 3.53084193e-03, 9.06925230e-04,\n",
+       "         6.44110070e+00],\n",
+       "        [8.82143236e-13, 3.22710868e-02, 1.80786853e-09, 4.33322286e-12,\n",
+       "         4.63505462e+00],\n",
+       "        [2.09641862e-01, 1.36335860e-20, 8.49455123e-17, 3.64010881e-09,\n",
+       "         3.06105647e+00],\n",
+       "        [3.51725932e-02, 2.52608946e-02, 8.30549419e-07, 5.99098396e-06,\n",
+       "         4.84841602e+00],\n",
+       "        [2.99537129e-05, 1.06851355e-03, 1.24670251e-05, 7.51320188e-02,\n",
+       "         6.40379985e+00],\n",
+       "        [3.75323824e+00, 8.13151135e-01, 1.75592191e-01, 5.35859195e-02,\n",
+       "         1.41981298e+01],\n",
+       "        [4.08197850e-02, 4.19455180e-05, 6.36342974e-07, 6.39252232e-03,\n",
+       "         5.21309652e+00],\n",
+       "        [1.67431563e+00, 7.33230815e-04, 1.16188539e-03, 6.10971233e-06,\n",
+       "         9.87023820e+00],\n",
+       "        [2.35844495e-12, 9.66458038e-21, 6.37100011e-06, 1.65966909e-02,\n",
+       "         1.74378987e+00],\n",
+       "        [5.78037633e-02, 1.14150765e-02, 3.49103746e-02, 1.10871713e-09,\n",
+       "         6.48723140e+00],\n",
+       "        [8.17554770e-11, 3.18473127e-20, 7.00750255e-18, 1.62445222e-17,\n",
+       "         6.10827320e+00],\n",
+       "        [3.19584215e-06, 1.37527613e+00, 7.76510282e-14, 3.98269696e-15,\n",
+       "         2.49267082e-04],\n",
+       "        [2.12186673e+00, 2.62762258e+00, 1.26867809e-08, 5.22968253e-09,\n",
+       "         4.16006486e-23],\n",
+       "        [6.35294149e-08, 3.06528869e+00, 2.42334195e-02, 2.83324676e-02,\n",
+       "         1.36009443e-06],\n",
+       "        [1.73077769e-01, 4.76818029e+00, 5.07777212e-04, 3.21401742e-03,\n",
+       "         4.69382290e-04],\n",
+       "        [5.33793153e-02, 3.98717372e+00, 1.15356833e-09, 1.12533513e-03,\n",
+       "         2.73511428e-01],\n",
+       "        [8.55278379e-01, 2.44808654e+00, 1.34994486e+00, 7.34489873e-02,\n",
+       "         1.28741041e-01],\n",
+       "        [6.13795277e-05, 1.00033185e+00, 4.34792205e-02, 1.60634577e-03,\n",
+       "         6.16445844e-04],\n",
+       "        [3.82950098e-01, 1.05821522e+01, 3.04752830e-04, 4.86089255e-04,\n",
+       "         7.09376616e-06],\n",
+       "        [8.57449053e-11, 5.59430230e+00, 1.45710239e-13, 1.65015399e-19,\n",
+       "         1.17644534e-10],\n",
+       "        [4.74293784e-02, 8.94929292e+00, 9.72956421e-11, 1.27412877e-11,\n",
+       "         2.12141480e-19],\n",
+       "        [1.45938451e+01, 5.63024930e+00, 8.14109453e-01, 1.60974721e-02,\n",
+       "         5.87440542e-05],\n",
+       "        [3.59708447e-02, 3.86906055e+00, 3.53364943e-03, 2.27739425e-07,\n",
+       "         5.83500286e-02],\n",
+       "        [6.77255005e-02, 3.50883841e+00, 1.64903517e-02, 3.45250320e-06,\n",
+       "         9.20342677e-02],\n",
+       "        [1.41303338e+00, 1.20583338e+00, 5.34635205e-02, 2.03931825e-02,\n",
+       "         2.05861217e-09],\n",
+       "        [1.15021883e-04, 2.09440193e+00, 5.72851680e-15, 1.65837392e-09,\n",
+       "         4.45378990e-02],\n",
+       "        [5.17809861e-02, 1.39135530e+00, 1.00777971e-03, 5.95708934e-03,\n",
+       "         8.66404562e-01],\n",
+       "        [9.31656144e-02, 8.10777917e+00, 8.49932384e-07, 3.15930929e-09,\n",
+       "         5.42110250e-02],\n",
+       "        [6.53241403e-02, 2.26888754e+00, 2.74886963e-05, 2.71516429e-02,\n",
+       "         4.93158849e-02],\n",
+       "        [6.67600315e-06, 3.90655128e+00, 1.19626325e-02, 1.15423706e-10,\n",
+       "         1.79951162e-01],\n",
+       "        [5.11583393e-01, 5.94068973e+00, 1.77461557e-01, 5.01809449e-03,\n",
+       "         1.95335795e-01],\n",
+       "        [4.61677206e-02, 6.71904652e+00, 2.79441724e-02, 2.26872804e-02,\n",
+       "         1.63518873e-05],\n",
+       "        [6.65597306e-02, 6.46774726e-01, 2.38691902e-10, 1.03583472e-05,\n",
+       "         9.43876819e-04],\n",
+       "        [3.30076379e-02, 4.17400909e+00, 8.44361417e-04, 1.79946111e-02,\n",
+       "         3.15224155e-02],\n",
+       "        [1.00303008e-02, 6.31522793e+00, 2.25015202e-06, 3.65022491e-02,\n",
+       "         4.74878193e-10],\n",
+       "        [3.45767192e-02, 1.61165744e+00, 1.67679252e-02, 4.56840847e-07,\n",
+       "         1.70013406e-18],\n",
+       "        [1.24060526e-13, 4.62209644e-01, 1.32276771e-25, 1.63445574e-19,\n",
+       "         8.21711424e-32],\n",
+       "        [2.91466331e-08, 2.50800180e+00, 2.53683662e-11, 7.73069127e-14,\n",
+       "         1.08514017e-14],\n",
+       "        [5.89058865e-17, 7.04566748e-01, 1.28716944e-27, 4.09445927e-17,\n",
+       "         8.20691199e-29],\n",
+       "        [4.39401447e-15, 3.55412056e+00, 6.77821371e-19, 1.44086040e-15,\n",
+       "         4.53924149e-18],\n",
+       "        [1.88747429e-02, 1.10030320e+01, 1.26677094e-03, 1.90443126e-02,\n",
+       "         5.67655419e+00],\n",
+       "        [3.14183228e-11, 2.29697468e+00, 7.61230210e-03, 1.57539650e-02,\n",
+       "         1.03502918e-16],\n",
+       "        [3.86134705e-02, 8.09896142e-01, 5.80863977e-02, 1.04392859e-06,\n",
+       "         1.25729578e-25],\n",
+       "        [1.67792274e-02, 5.20900178e+00, 6.42795466e-13, 2.15774427e-11,\n",
+       "         6.93734412e-10],\n",
+       "        [1.64733043e-09, 5.18689181e+00, 6.65601124e-12, 2.88597293e-08,\n",
+       "         1.05818271e-01],\n",
+       "        [2.34606558e-01, 3.39526299e-02, 6.87083092e-01, 1.39344455e-11,\n",
+       "         1.47882775e-02],\n",
+       "        [2.94494872e-01, 7.05881580e-02, 2.83054180e+00, 8.66793261e-07,\n",
+       "         6.17238418e-01],\n",
+       "        [1.41059436e+00, 3.33891708e-01, 1.95005528e+00, 2.16717389e-02,\n",
+       "         2.00157686e-01],\n",
+       "        [1.46867115e-13, 1.07494311e-01, 1.42701819e+00, 1.02537112e-01,\n",
+       "         4.16990013e-09],\n",
+       "        [2.14657633e-06, 7.97214430e-10, 1.29326410e+01, 1.12976775e-02,\n",
+       "         2.51938614e-06],\n",
+       "        [2.03308892e-09, 3.02629351e-05, 1.05518134e+00, 1.20331985e+01,\n",
+       "         1.54073718e-05],\n",
+       "        [3.74849411e-09, 1.23270772e-06, 4.28988349e+00, 3.18811029e+00,\n",
+       "         2.07515779e-06],\n",
+       "        [4.54611628e-05, 4.67703075e-05, 1.64120653e+00, 3.00307002e+00,\n",
+       "         2.07472994e-16],\n",
+       "        [2.75481948e-03, 9.42136312e-06, 3.73278529e+00, 5.19185086e+00,\n",
+       "         2.57453973e+00],\n",
+       "        [2.20653240e-10, 7.40569756e-08, 1.38267833e+00, 1.63437620e+01,\n",
+       "         2.79819149e-14],\n",
+       "        [5.64514286e-09, 5.21509709e-02, 6.68933531e+00, 3.75134419e-02,\n",
+       "         3.79718917e-07],\n",
+       "        [3.69198057e-04, 2.98921843e-17, 9.73440989e+00, 8.82171906e-04,\n",
+       "         4.25363252e-09],\n",
+       "        [1.97145682e-08, 6.85459914e-10, 4.07857876e+01, 1.85498665e-03,\n",
+       "         1.71692878e-09],\n",
+       "        [8.35241483e-04, 3.49503164e-02, 2.82126636e+00, 3.03178958e-01,\n",
+       "         3.39907708e-02],\n",
+       "        [2.49336799e-04, 6.56976822e-06, 1.52366777e+01, 1.06100013e-09,\n",
+       "         8.20307377e-07],\n",
+       "        [2.46378916e-06, 1.11715740e-14, 1.17438723e+01, 8.14210270e-02,\n",
+       "         2.06039991e-06],\n",
+       "        [2.12908466e-16, 1.29563438e-19, 2.03980961e+00, 5.48968723e-01,\n",
+       "         3.63874040e-13]]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inferred membership matrix\n",
+    "\n",
+    "U.shape, U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "aa794643-b6f6-4e63-872a-90d236ffe4a7",
    "metadata": {},
    "outputs": [
@@ -254,7 +563,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
+   "id": "babc8ad7-9f49-4682-99ca-4512b47116f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5, 5),\n",
+       " array([[1.07974399e-01, 7.07780921e-05, 1.40593271e-07, 7.68546732e-05,\n",
+       "         9.01768772e-06],\n",
+       "        [7.07780921e-05, 2.13140435e-01, 3.01226139e-08, 1.22383124e-03,\n",
+       "         3.59291310e-05],\n",
+       "        [1.40593271e-07, 3.01226139e-08, 3.87359498e-02, 3.16102534e-01,\n",
+       "         2.24390199e-07],\n",
+       "        [7.68546732e-05, 1.22383124e-03, 3.16102534e-01, 2.51215466e-06,\n",
+       "         2.47604804e-06],\n",
+       "        [9.01768772e-06, 3.59291310e-05, 2.24390199e-07, 2.47604804e-06,\n",
+       "         6.81205726e-02]]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Inferred affinity matrix.\n",
+    "\n",
+    "W.shape, W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "412150e0-f436-4941-bdb2-322e43f340dd",
    "metadata": {},
    "outputs": [
@@ -277,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "349e1375-971f-43cc-8140-e7f0b3d1b23c",
    "metadata": {},
    "outputs": [
@@ -290,7 +632,7 @@
     }
    ],
    "source": [
-    "# Map the nodes in the hypergraph into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
+    "# Map the nodes into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
     "# We use the Euclidean distance in the UMAP.\n",
     "\n",
     "comm_vis.node_layout(G, data_name, settings, U, W, metric=\"euclidean\")"
@@ -298,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "31ae0217-0008-4257-979d-41bba15a4990",
    "metadata": {},
    "outputs": [
@@ -311,7 +653,7 @@
     }
    ],
    "source": [
-    "# Map the nodes in the hypergraph into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
+    "# Map the nodes into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
     "# We use the cosine distance in the UMAP.\n",
     "\n",
     "comm_vis.node_layout(G, data_name, settings, U, W, metric=\"cosine\")"
