--- a/hyperneo.ipynb
+++ b/hyperneo.ipynb
@@ -3,171 +3,28 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "33928b03-fbcc-4727-8ab2-8c65baaf1da0",
+   "id": "10df1dc5-6cda-4bb5-8523-4764de2244bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import libraries and load the experimental settings.\n",
-    "\n",
-    "import hypergraph, hyperneo, comm_vis\n",
-    "settings = comm_vis.read_settings()"
+    "# HyperNEO - Inferring community structure in attributed hypergraphs using stochastic block models\n",
+    "# Reference: \n",
+    "# Kazuki Nakajima and Takeaki Uno. Inferring community structure in attributed hypergraphs using stochastic block models. 2024. arXiv."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d4eebce9-3571-4ea1-9cf1-bb33d5a8bd46",
+   "id": "33928b03-fbcc-4727-8ab2-8c65baaf1da0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"random_state\": 42,\n",
-      "  \"workplace\": {\n",
-      "    \"label_name\": [\n",
-      "      \"DISQ\",\n",
-      "      \"DMCT\",\n",
-      "      \"DSE\",\n",
-      "      \"SFLE\",\n",
-      "      \"SRH\"\n",
-      "    ],\n",
-      "    \"label_order\": [\n",
-      "      0,\n",
-      "      1,\n",
-      "      2,\n",
-      "      3,\n",
-      "      4\n",
-      "    ],\n",
-      "    \"community_order\": [\n",
-      "      0,\n",
-      "      4,\n",
-      "      1,\n",
-      "      2,\n",
-      "      3\n",
-      "    ],\n",
-      "    \"hyperparam\": [\n",
-      "      5,\n",
-      "      0.9\n",
-      "    ]\n",
-      "  },\n",
-      "  \"hospital\": {\n",
-      "    \"label_name\": [\n",
-      "      \"ADM\",\n",
-      "      \"MED\",\n",
-      "      \"NUR\",\n",
-      "      \"PAT\"\n",
-      "    ],\n",
-      "    \"label_order\": [\n",
-      "      0,\n",
-      "      1,\n",
-      "      2,\n",
-      "      3\n",
-      "    ],\n",
-      "    \"community_order\": [\n",
-      "      1,\n",
-      "      0\n",
-      "    ],\n",
-      "    \"hyperparam\": [\n",
-      "      2,\n",
-      "      0.4\n",
-      "    ]\n",
-      "  },\n",
-      "  \"contact-high-school\": {\n",
-      "    \"label_name\": [\n",
-      "      \"2BIO1\",\n",
-      "      \"2BIO2\",\n",
-      "      \"2BIO3\",\n",
-      "      \"MP*1\",\n",
-      "      \"MP*2\",\n",
-      "      \"PSI*\",\n",
-      "      \"PC\",\n",
-      "      \"PC*\",\n",
-      "      \"MP\"\n",
-      "    ],\n",
-      "    \"label_order\": [\n",
-      "      0,\n",
-      "      1,\n",
-      "      2,\n",
-      "      8,\n",
-      "      3,\n",
-      "      4,\n",
-      "      6,\n",
-      "      7,\n",
-      "      5\n",
-      "    ],\n",
-      "    \"community_order\": [\n",
-      "      5,\n",
-      "      4,\n",
-      "      1,\n",
-      "      6,\n",
-      "      3,\n",
-      "      8,\n",
-      "      2,\n",
-      "      0,\n",
-      "      7\n",
-      "    ],\n",
-      "    \"hyperparam\": [\n",
-      "      9,\n",
-      "      0.8\n",
-      "    ]\n",
-      "  },\n",
-      "  \"contact-primary-school\": {\n",
-      "    \"label_name\": [\n",
-      "      \"5B\",\n",
-      "      \"5A\",\n",
-      "      \"4A\",\n",
-      "      \"Teachers\",\n",
-      "      \"3B\",\n",
-      "      \"4B\",\n",
-      "      \"2A\",\n",
-      "      \"1B\",\n",
-      "      \"2B\",\n",
-      "      \"1A\",\n",
-      "      \"3A\"\n",
-      "    ],\n",
-      "    \"label_order\": [\n",
-      "      9,\n",
-      "      7,\n",
-      "      6,\n",
-      "      8,\n",
-      "      10,\n",
-      "      4,\n",
-      "      2,\n",
-      "      5,\n",
-      "      1,\n",
-      "      0,\n",
-      "      3\n",
-      "    ],\n",
-      "    \"community_order\": [\n",
-      "      9,\n",
-      "      0,\n",
-      "      3,\n",
-      "      6,\n",
-      "      4,\n",
-      "      5,\n",
-      "      1,\n",
-      "      2,\n",
-      "      10,\n",
-      "      7,\n",
-      "      8\n",
-      "    ],\n",
-      "    \"hyperparam\": [\n",
-      "      11,\n",
-      "      0.8\n",
-      "    ]\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Import libraries and load the settings of our experiments.\n",
     "# The object named 'settings' stores the order of node labels, the set of node label names, \n",
     "# the order of inferred communities, the hyperparameter set for each empirical hypergraph, and the random seed.\n",
     "\n",
-    "import json\n",
-    "print(json.dumps(settings, indent=2))"
+    "import hypergraph, hyperneo, comm_vis\n",
+    "settings = comm_vis.read_settings()"
    ]
   },
   {
@@ -205,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a4c20de6-532b-4f94-889b-0c20d6567ab7",
    "metadata": {},
    "outputs": [
@@ -221,12 +78,13 @@
     "# Set the random seed.\n",
     "\n",
     "random_state = settings[\"random_state\"]\n",
+    "\n",
     "print(random_state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d98f4d00-37f8-466d-b5e9-d258884f88a8",
    "metadata": {},
    "outputs": [
@@ -239,7 +97,11 @@
     }
    ],
    "source": [
-    "# Set the hyperparameters.\n",
+    "# Set the hyperparameters of HyperNEO.\n",
+    "# K : Number of overlapping communities underlying the hypergraph\n",
+    "# gamma : 0 <= gamma < 1. \n",
+    "#         Adjusts the degree to which node attribute data is incorporated into the learning of the community structure. \n",
+    "#         The higher the gamma value, the more node attribute data is incorporated into the learning.\n",
     "\n",
     "(K, gamma) = settings[data_name][\"hyperparam\"]\n",
     "\n",
@@ -253,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fit the latent parameters of HyperNEO to the data.\n",
+    "# Fit the latent parameters (U, W, Beta) of HyperNEO to the data.\n",
     "\n",
     "model = hyperneo.HyperNEO(G, K, gamma, random_state=random_state)\n",
     "best_loglik, (U, W, Beta) = model.fit()"
@@ -296,7 +158,7 @@
     }
    ],
    "source": [
-    "# Fix the order of the node labels\n",
+    "# Fix the order of the indices of the node labels\n",
     "\n",
     "label_order = settings[data_name][\"label_order\"]\n",
     "\n",
@@ -551,6 +413,8 @@
    ],
    "source": [
     "# Inferred membership matrix\n",
+    "# U is an N x K matrix. \n",
+    "# The (i, k)-th element, u_ik, is the propensity that node v_i belongs to the k-th community.\n",
     "\n",
     "U.shape, U"
    ]
@@ -573,7 +437,10 @@
     }
    ],
    "source": [
-    "# Visualize inferred membership matrix.\n",
+    "# Visualize a hetmap of the inferred membership matrix.\n",
+    "# The N row indices are arranged according to the attributes of the nodes for visualization purposes.\n",
+    "# Each row is normalized so that the row sum is 1 for visualization purposes.\n",
+    "# For example, the figure suggests that individuals in the DISQ department tend to strongly belong to the k=0-th community.\n",
     "\n",
     "comm_vis.inferred_membership_matrix(G, data_name, U, label_name, label_order, community_order)"
    ]
@@ -607,6 +474,8 @@
    ],
    "source": [
     "# Inferred affinity matrix.\n",
+    "# W is a K x K matrix. \n",
+    "# The matrix represents the strength of intra- and inter-community interactions among nodes.\n",
     "\n",
     "W.shape, W"
    ]
@@ -629,7 +498,9 @@
     }
    ],
    "source": [
-    "# Visualize inferred affinity matrix.\n",
+    "# Visualize a heatmap of the inferred affinity matrix.\n",
+    "# Each element is divided by the largest element of the matrix row so that any element is not more than 1.0 for visualization purposes.\n",
+    "# The figure suggests that individuals largely tend to have more intra-community contacts than inter-community contacts.\n",
     "\n",
     "comm_vis.inferred_affinity_matrix(G, data_name, W, community_order)"
    ]
@@ -651,6 +522,8 @@
    "source": [
     "# Map the nodes into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
     "# We use the Euclidean distance in the UMAP.\n",
+    "# A data point represents an individual and is colored by their attribute.\n",
+    "# We find that individuals who have similar community memberships are positioned closely to each other.\n",
     "\n",
     "comm_vis.node_layout(G, data_name, U, W, label_name, label_order, random_state, metric=\"euclidean\")"
    ]
@@ -672,6 +545,8 @@
    "source": [
     "# Map the nodes into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
     "# We use the cosine distance in the UMAP.\n",
+    "# A data point represents an individual and is colored by their attribute.\n",
+    "# We are allowed an easier identification of individuals who have similar community memberships than using the cosine distance in the UMAP.\n",
     "\n",
     "comm_vis.node_layout(G, data_name, U, W, label_name, label_order, random_state, metric=\"cosine\")"
    ]
