--- a/hyperneo.ipynb
+++ b/hyperneo.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# HyperNEO - Inferring community structure in attributed hypergraphs using stochastic block models\n",
     "# Reference: \n",
-    "# Kazuki Nakajima and Takeaki Uno. Inferring community structure in attributed hypergraphs using stochastic block models. 2024. arXiv."
+    "# Kazuki Nakajima and Takeaki Uno. \"Inferring community structure in attributed hypergraphs using stochastic block models\". arXiv preprint arXiv:2401.00688 (2024)."
    ]
   },
   {
@@ -568,6 +568,14 @@
     "\n",
     "comm_vis.node_layout(G, data_name, U, W, label_name, label_order, random_state, metric=\"cosine\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b6dbe12-2af1-49cd-838a-ac6411c1a902",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
