--- a/hyperneo.ipynb
+++ b/hyperneo.ipynb
@@ -508,7 +508,7 @@
     "# Map the nodes into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
     "# We use the Euclidean distance in the UMAP.\n",
     "# A data point represents an individual and is colored by their attribute.\n",
-    "# We find that individuals who have similar community memberships are positioned closely to each other.\n",
+    "# We find that individuals with similar community memberships are positioned closely to each other.\n",
     "\n",
     "comm_vis.node_layout(G, data_name, U, W, label_name, label_order, random_state, metric=\"euclidean\")"
    ]
@@ -541,7 +541,7 @@
     "# Map the nodes into a two-dimensional vector space using the inferred membership and affinity matrices.\n",
     "# We use the cosine distance in the UMAP.\n",
     "# A data point represents an individual and is colored by their attribute.\n",
-    "# We are allowed an easier identification of individuals who have similar community memberships than using the cosine distance in the UMAP.\n",
+    "# We are allowed an easier identification of individuals with similar community memberships than using the Euclidean distance in the UMAP.\n",
     "\n",
     "comm_vis.node_layout(G, data_name, U, W, label_name, label_order, random_state, metric=\"cosine\")"
    ]
